--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 once_cell = "1.13.0"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
 either = "1.7.0"
+pest = "2.2"
+pest_derive = "2.2"
