--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -5,5 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 rustc_version = "0.4.0"
+libc = "0.2"
