--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ libloading = "0.7"
 serial_test = "0.4.0"
 clap = "3.2.0"
 md5 = "0.7.0"
+serde = { version = "1.0.164", features = ["rc", "derive"] }
+serde_json = "1.0.97"
 
 [[bin]]
 name = "fix"
