--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ clap = "3.2.0"
 md5 = "0.7.0"
 serde = { version = "1.0.164", features = ["rc", "derive"] }
 serde_json = "1.0.97"
+build-time = "0.1.3"
+chrono = "0.4.26"
 
 [[bin]]
 name = "fix"
