--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0.164", features = ["rc", "derive"] }
 serde_json = "1.0.97"
 build-time = "0.1.3"
 chrono = "0.4.26"
+serde-pickle = "1.1.1"
 
 [[bin]]
 name = "fix"
