impl debug info (wip)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,28 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) a.out",
-            "type": "cppdbg",
+            "type": "lldb",
             "request": "launch",
+            "name": "(lldb) debug a.out",
             "program": "${workspaceFolder}/a.out",
             "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
+            "cwd": "${workspaceFolder}"
         },
         {
             "type": "lldb",
