--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 once_cell = "1.13.0"
-inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
+inkwell = { version = "0.1.0", features = ["llvm12-0"] }
 either = "1.7.0"
 pest = "2.3.0"
 pest_derive = "2.2"
