--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ num-bigint = "0.4.4"
 lsp-types = "0.97.0"
 toml = "0.8.19"
 difference = "0.4"
+semver = "1.0.23"
+git2 = "0.19.0"
+tempfile = "3.12.0"
 
 [[bin]]
 name = "fix"
