--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ difference = "0.4"
 semver = "1.0.23"
 git2 = "0.19.0"
 tempfile = "3.12.0"
+reqwest = { version = "0.12", features = ["blocking"] }
 
 [[bin]]
 name = "fix"
 path = "src/main.rs"
-
