--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ semver = "1.0.23"
 git2 = "0.19.0"
 tempfile = "3.12.0"
 reqwest = { version = "0.12", features = ["blocking"] }
+num_cpus = "1.16.0"
 
 [[bin]]
 name = "fix"
