--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ git2 = "0.19.0"
 tempfile = "3.12.0"
 reqwest = { version = "0.12", features = ["blocking"] }
 num_cpus = "1.16.0"
+dirs = "5.0.1"
 
 [[bin]]
 name = "fix"
