--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tempfile = "3.12.0"
 reqwest = { version = "0.12", features = ["blocking"] }
 num_cpus = "1.16.0"
 dirs = "5.0.1"
+fxhash = "0.2.1"
 
 [[bin]]
 name = "fix"
