--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ reqwest = { version = "0.12", features = ["blocking"] }
 num_cpus = "1.16.0"
 dirs = "5.0.1"
 fxhash = "0.2.1"
+urlencoding = "2.1.3"
 
 [[bin]]
 name = "fix"
