change speedtest code

--- a/benchmark/speedtest/fixproj.toml
+++ b/benchmark/speedtest/fixproj.toml
@@ -85,3 +85,8 @@ files = ["speedtest.fix"]
 name = "random"
 version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
+
+[[dependencies]]
+name = "fast-iter"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-fast-iter.git" }
