--- a/src/docs/project_template.toml
+++ b/src/docs/project_template.toml
@@ -57,6 +57,9 @@ files = ["main.fix"]
 
 ## Preliminary commands to be executed before the Fix program is compiled.
 ## This is useful when you need to compile a object files / library before compiling the Fix program.
+## (Experimental) Furthermore, you can change the Fix compiler options by outputting lines with specific formats in the preliminary commands.
+## At the moment, the following formats are supported.
+## - `fix.ld_flags=(...)`: Specify flags to pass to the linker. Specify flags separated by spaces in `...`. Example: `fix.ld_flags=-L/path/to/lib -lmylib`
 # preliminary_commands = [["make", "lib.o"]]
 
 ## Additional build options when running `fix test`.
