--- a/std_doc/fixproj.toml
+++ b/std_doc/fixproj.toml
@@ -1,6 +1,7 @@
 [general]
-name = "void-project"
+name = "std-doc"
 version = "0.1.0"
+description = "A project for the standard library documentation"
 
 [build]
 files = ["main.fix"]
