--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,9 +61,12 @@ jobs:
         shell: bash
         run: |
             if [[ "${{ matrix.job.os }}" == "ubuntu-latest" ]]; then
+              sudo apt-get update
               if [[ "${{ matrix.job.target }}" == "x86_64-unknown-linux-gnu" ]]; then
+                sudo apt-get install libssl-dev
                 LLVM_URL="https://github.com/llvm/llvm-project/releases/download/llvmorg-12.0.1/clang+llvm-12.0.1-x86_64-linux-gnu-ubuntu-16.04.tar.xz"
               elif [[ "${{ matrix.job.target }}" == "aarch64-unknown-linux-gnu" ]]; then
+                sudo apt-get install libssl-dev:arm64              
                 LLVM_URL="https://github.com/llvm/llvm-project/releases/download/llvmorg-12.0.1/clang+llvm-12.0.1-aarch64-linux-gnu.tar.xz"
               else
                 echo "Unsupported target: ${{ matrix.job.target }}"
@@ -74,7 +77,6 @@ jobs:
               tar -xf llvm.tar.xz -C llvm --strip-components=1
               LLVM_PATH="${GITHUB_WORKSPACE}/llvm"
               echo "LLVM_SYS_120_PREFIX=$LLVM_PATH" >> $GITHUB_ENV
-              sudo apt-get install libssl-dev
               echo "OPENSSL_DIR=/usr/" >> $GITHUB_ENV
             elif [[ "${{ matrix.job.os }}" == "macos-latest" ]]; then
               brew install llvm@12
