--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,15 +37,15 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.job.os }}
+    runs-on: ${{ matrix.job.image }}
     strategy:
       fail-fast: false
       matrix:
-        job:
-          - { os: ubuntu-latest  , target: x86_64-unknown-linux-gnu       , use-cross: false , extension: ""   }
-          # - { os: ubuntu-latest  , target: aarch64-unknown-linux-gnu      , use-cross: true  , extension: ""   } # OpenSSLのクロスコンパイルができないのでコメントアウト
-          # - { os: macos-latest   , target: x86_64-apple-darwin            , use-cross: false , extension: ""   } # OpenSSLのクロスコンパイルができないのでコメントアウト
-          - { os: macos-latest   , target: aarch64-apple-darwin           , use-cross: false , extension: ""   }
+        job: # https://github.com/actions/runner-images
+          - { os: ubuntu, image: ubuntu-20.04  , target: x86_64-unknown-linux-gnu       , use-cross: false , extension: ""   }
+          # - { os: ubuntu, image: ubuntu-latest  , target: aarch64-unknown-linux-gnu      , use-cross: true  , extension: ""   } # OpenSSLのクロスコンパイルがうまくできないのでカット
+          - { os: macos,  image: macos-13   , target: x86_64-apple-darwin            , use-cross: false , extension: ""   }
+          - { os: macos,  image: macos-14   , target: aarch64-apple-darwin           , use-cross: false , extension: ""   }
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -56,7 +56,7 @@ jobs:
         run: |
           echo "PROJECT_NAME=$(sed -n 's/^name = "\(.*\)"/\1/p' Cargo.toml | head -n1)" >> $GITHUB_ENV
 
-      # LLVMとOpenSSLをインストール
+      # LLVM（とOpenSSL）をインストール
       - name: Install LLVM & OpenSSL
         shell: bash
         run: |
