--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "fixlang"
 version = "1.1.0"
 edition = "2021"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -35,6 +36,7 @@ dirs = "5.0.1"
 fxhash = "0.2.1"
 urlencoding = "2.1.3"
 colored = "2.1.0"
+git-version = "0.3.9"
 
 [[bin]]
 name = "fix"
