--- a/benchmark/speedtest/cases/sum_by_loop_iter/fixproj.toml
+++ b/benchmark/speedtest/cases/sum_by_loop_iter/fixproj.toml
@@ -1,9 +1,12 @@
 [general]
 ## Project name. This is a required field.
-name = "sppedtest"
+name = "myproject"
 
 ## Project version (in semver). This is a required field.
 version = "0.1.0"
+
+## Fix version requirement. Default is "*".
+fix_version = "1.1.0"
 
 ## Project authors.
 # authors = ["Alice", "Bob"]
@@ -35,14 +38,17 @@ files = ["main.fix"]
 ## Merged with paths specified in the command line argument.
 # library_paths = ["."]
 
+## Other linker options.
+# ld_flags = ["-L/usr/lib", "-lijk"]
+
 ## Whether to generate debug information.
 ## Overwritten by the command line argument.
 # debug = true
 
 ## Optimization level.
-## One of "none", "separated", "default".
+## One of "none", "basic", "max".
 ## Overwritten by the command line argument.
-# opt_level = "default"
+# opt_level = "max"
 
 ## Output file name.
 ## Overwritten by the command line argument.
@@ -56,17 +62,18 @@ files = ["main.fix"]
 ## This is useful when you need to compile a object files / library before compiling the Fix program.
 ## (Experimental) Furthermore, you can change the Fix compiler options by outputting lines with specific formats in the preliminary commands.
 ## At the moment, the following formats are supported.
-## - `fix.ld_flags=(...)`: Specify flags to pass to the linker. Specify flags separated by spaces in `...`. Example: `fix.ld_flags=-L/path/to/lib -lmylib`
+## - `fix.ld_flags=(...)`: Specify flags to pass to the linker. Specify flags separated by spaces in `...`. Example: `fix.ld_flags=-L/path/to/lib -lmylib`.
+## This is useful when you need to get the path to the library dynamically, e.g., using pkg-config.
 # preliminary_commands = [["make", "lib.o"]]
 
-## Additional build options when running `fix test`.
-## Available fields are almost the same as ones in "[build]".
-# [build.test]
-# files = ["test.fix"]
+# Additional build options when running `fix test`.
+# Available fields are almost the same as ones in "[build]".
+[build.test]
+files = ["test.fix"]
 
 ## By "[[dependencies]]" array, you can add a Fix project as a dependency.
 ## Each dependency must have "fixproj.toml" file at the project root directory.
-## If a dependency also has dependencies, "fix" will consider them recursively.
+## If a dependency also has their dependencies, "fix" will consider them recursively.
 ## NOTE: The syntax for version requirement is the same as in Cargo. See: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
 
 ## The following is an example of a dependency to a project in the local file system.
@@ -82,9 +89,3 @@ files = ["main.fix"]
 # name = "your-project"
 # version = "1.2.0"
 # git = { url = "https://github.com/tttmmmyyyy/your-project.git" }
-
-
-[[dependencies]]
-name = "ez-scripting"
-version = "0.1.0"
-git = { url = "https://github.com/tttmmmyyyy/ez_scripting.git" }
