--- a/src/docs/project_template.toml
+++ b/src/docs/project_template.toml
@@ -55,8 +55,10 @@ files = ["main.fix"]
 # output = "myprogram.out"
 
 ## Whether to use the thread-safe reference counting.
-## Overwritten by the command line argument.
 # threaded = false
+
+## Whether to enable backtrace when a runtime error occurs.
+# backtrace = false
 
 ## Preliminary commands to be executed before the Fix program is compiled.
 ## This is useful when you need to compile a object files / library before compiling the Fix program.
