--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,9 @@ jobs:
           override: true
 
       - name: Install valgrind
-        run: sudo apt-get update && sudo apt-get install -y valgrind
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y valgrind=1:3.22.*
 
       - name: Run tests
         run: cargo test --release
