--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,20 +7,31 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-14]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install LLVM
+      - name: Install LLVM & dependencies
         shell: bash
         run: |
-          LLVM_URL="https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.6/clang+llvm-17.0.6-x86_64-linux-gnu-ubuntu-22.04.tar.xz"
-          mkdir -p llvm
-          wget -q "$LLVM_URL" -O llvm.tar.xz
-          tar -xf llvm.tar.xz -C llvm --strip-components=1
-          LLVM_PATH="${GITHUB_WORKSPACE}/llvm"
-          echo "LLVM_SYS_170_PREFIX=$LLVM_PATH" >> $GITHUB_ENV
+          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
+            LLVM_URL="https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.6/clang+llvm-17.0.6-x86_64-linux-gnu-ubuntu-22.04.tar.xz"
+            mkdir -p llvm
+            wget -q "$LLVM_URL" -O llvm.tar.xz
+            tar -xf llvm.tar.xz -C llvm --strip-components=1
+            LLVM_PATH="${GITHUB_WORKSPACE}/llvm"
+            echo "LLVM_SYS_170_PREFIX=$LLVM_PATH" >> $GITHUB_ENV
+          elif [[ "${{ matrix.os }}" == "macos-14" ]]; then
+            brew install llvm@17
+            echo "LLVM_SYS_170_PREFIX=$(brew --prefix llvm@17)" >> $GITHUB_ENV
+            brew install openssl
+            echo "OPENSSL_DIR=$(brew --prefix openssl)" >> $GITHUB_ENV
+          fi
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
@@ -28,7 +39,8 @@ jobs:
           toolchain: stable
           override: true
 
-      - name: Install valgrind
+      - name: Install valgrind (Ubuntu only)
+        if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y valgrind=1:3.22.*
